--- a/Aria.DroidApp/Resources/layout/activity_main.axml
+++ b/Aria.DroidApp/Resources/layout/activity_main.axml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-	<Button
-        android:id="@+id/SaveResetTimeButton"
-        android:text="Save Reset Time"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp" />
+<LinearLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+	    xmlns:tools="http://schemas.android.com/tools"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical" >
 
-</android.support.design.widget.CoordinatorLayout>
+		<TextView
+			android:text="Pick Reset Time Below"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:gravity="center_horizontal"
+			/>
+
+		<TimePicker
+			android:id="@+id/ResetTimePicker"	
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:timePickerMode="spinner"
+			/>
+		
+		<Button
+			android:id="@+id/SaveResetTimeButton"
+			android:text="Save Reset Time"
+			android:layout_width="wrap_content"
+			android:layout_height="50dp" 
+			/>
+
+</LinearLayout>
