--- a/Aria.DroidApp/Resources/layout/activity_main.axml
+++ b/Aria.DroidApp/Resources/layout/activity_main.axml
@@ -1,32 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:app="http://schemas.android.com/apk/res-auto"
-	    xmlns:tools="http://schemas.android.com/tools"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:orientation="vertical" >
-
-		<TextView
-			android:text="Pick Reset Time Below"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:gravity="center_horizontal"
-			/>
-
-		<TimePicker
-			android:id="@+id/ResetTimePicker"	
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:timePickerMode="spinner"
-			/>
-		
-		<Button
-			android:id="@+id/SaveResetTimeButton"
-			android:text="Save Reset Time"
-			android:layout_width="wrap_content"
-			android:layout_height="50dp" 
-			/>
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="10dp"
+    android:orientation="vertical">
+    <TextView
+        android:text="Aria app allows you to automatically erase call forwarding at a specified time."
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:textSize="30sp" />
+    <TimePicker
+        android:id="@+id/ResetTimePicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:timePickerMode="spinner"
+        android:layout_gravity="center" />
+    <Button
+        android:id="@+id/SaveResetTimeButton"
+        android:text="Schedule Erase"
+        android:textAllCaps="false"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
 </LinearLayout>
