v2: Trying setExactAndAllowWithWhileIdle method to schedule alarm to wake up during Doze mode.

--- a/Aria.DroidApp/Resources/layout/activity_main.axml
+++ b/Aria.DroidApp/Resources/layout/activity_main.axml
@@ -13,6 +13,12 @@
         android:gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:textSize="30sp" />
+    <TextView
+        android:id="@+id/VersionTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="20dp"/>
     <TimePicker
         android:id="@+id/ResetTimePicker"
         android:layout_width="wrap_content"
@@ -25,4 +31,5 @@
         android:textAllCaps="false"
         android:layout_width="match_parent"
         android:layout_height="50dp" />
+    
 </LinearLayout>
